[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/background/LEVEL SELECT.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/CANTARELL-REGULAR.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://source/levels/Map.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/CANTARELL-BOLD.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[node name="Map" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 1284.0 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="StartButton" type="Button" parent="."]
margin_left = 1285.0
margin_top = 917.0
margin_right = 1886.0
margin_bottom = 1043.0
custom_fonts/font = SubResource( 1 )
text = "Go!"

[node name="LevelName" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 1307.0
margin_top = 38.0
margin_right = 1656.0
margin_bottom = 93.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "MISSION NAME"
valign = 1

[node name="LevelDescription" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 1306.0
margin_top = 146.0
margin_right = 1876.0
margin_bottom = 508.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "MISSION DESCRIPTION"
autowrap = true

[node name="LevelObjective" type="Label" parent="."]
margin_left = 1305.0
margin_top = 496.0
margin_right = 1851.0
margin_bottom = 746.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "MISSION OBJECTIVE"
autowrap = true

[node name="Level1" type="Button" parent="."]
margin_left = 513.0
margin_top = 575.0
margin_right = 869.0
margin_bottom = 1041.0
custom_fonts/font = SubResource( 1 )
flat = true

[node name="Level2" type="Button" parent="."]
margin_left = 22.0
margin_top = 519.0
margin_right = 431.0
margin_bottom = 1028.0
custom_fonts/font = SubResource( 1 )
flat = true

[node name="Level3" type="Button" parent="."]
margin_left = 34.0
margin_top = 11.0
margin_right = 445.0
margin_bottom = 507.0
custom_fonts/font = SubResource( 1 )
flat = true

[node name="LevelTuto" type="Button" parent="."]
margin_left = 501.0
margin_top = 26.0
margin_right = 1190.0
margin_bottom = 524.0
custom_fonts/font = SubResource( 1 )
flat = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="LevelTuto" to="." method="_on_LevelTuto_pressed"]
